[gd_scene load_steps=39 format=3 uid="uid://3tg3fvdml66v"]

[ext_resource type="Script" path="res://Scripts/village_manager.gd" id="1_8453s"]
[ext_resource type="Texture2D" uid="uid://b6ctmndytodw5" path="res://assets/images/background/environment.png" id="2_ye1tv"]
[ext_resource type="Texture2D" uid="uid://8yp0mog88sjy" path="res://assets/images/background/forest.png" id="3_coavi"]
[ext_resource type="Texture2D" uid="uid://bovh5se2x4wem" path="res://assets/images/background/fishingDock.png" id="4_erpi2"]
[ext_resource type="Texture2D" uid="uid://4srgh3gfrr0l" path="res://assets/images/shipyard.png" id="5_31vu7"]
[ext_resource type="Texture2D" uid="uid://bqqv1vorjofw4" path="res://assets/images/Boat/new/boatNew.png" id="5_gspg7"]
[ext_resource type="Texture2D" uid="uid://jao7raxh5p8w" path="res://assets/images/glowEffect.png" id="6_x86gk"]
[ext_resource type="Texture2D" uid="uid://brnpibv3xflon" path="res://assets/images/ninepatchWooden.png" id="7_nrjl2"]
[ext_resource type="Texture2D" uid="uid://dgody1wqwkoc6" path="res://assets/images/woodIcon.png" id="8_ss86h"]
[ext_resource type="Texture2D" uid="uid://ddo1wntqce10" path="res://assets/images/watermelon.png" id="8_wm16u"]
[ext_resource type="Texture2D" uid="uid://c8hvamduq5vnf" path="res://assets/images/TextBoxTexture.png" id="9_g40b4"]
[ext_resource type="Texture2D" uid="uid://bt8ttxdkr066y" path="res://assets/images/volunteerIcon.png" id="10_4uajt"]
[ext_resource type="Texture2D" uid="uid://c1bp8qrv37u78" path="res://assets/images/rainEffect.png" id="11_5xih2"]
[ext_resource type="PackedScene" uid="uid://biy6bjtvu44kf" path="res://Scenes/help_menu.tscn" id="13_12tmy"]
[ext_resource type="PackedScene" uid="uid://c3sfij5h72rdn" path="res://Scenes/shipyard_menu.tscn" id="14_q8gvt"]
[ext_resource type="AudioStream" uid="uid://bv8y2m5yvngvh" path="res://assets/music/Tranquil_Tempest (1).mp3" id="17_3x7vg"]
[ext_resource type="Script" path="res://Scripts/cheat_menu.gd" id="36_s1wjk"]
[ext_resource type="Texture2D" uid="uid://li0hd23rigyc" path="res://assets/images/CowMob1.png" id="37_jwrhm"]
[ext_resource type="Script" path="res://Scripts/earn_report.gd" id="38_5bnfc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2i21o"]
atlas = ExtResource("2_ye1tv")
region = Rect2(0, 0, 384, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ikhp"]
atlas = ExtResource("2_ye1tv")
region = Rect2(384, 0, 384, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_vwxs1"]
atlas = ExtResource("2_ye1tv")
region = Rect2(768, 0, 384, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_gm5og"]
atlas = ExtResource("2_ye1tv")
region = Rect2(0, 256, 384, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_76ads"]
atlas = ExtResource("2_ye1tv")
region = Rect2(384, 256, 384, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_cfcei"]
atlas = ExtResource("2_ye1tv")
region = Rect2(768, 256, 384, 256)

[sub_resource type="SpriteFrames" id="SpriteFrames_q7dmf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2i21o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ikhp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vwxs1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gm5og")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_76ads")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cfcei")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_lggij"]
atlas = ExtResource("5_gspg7")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6mdcx"]
atlas = ExtResource("5_gspg7")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7bsth"]
atlas = ExtResource("5_gspg7")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_odbl3"]
atlas = ExtResource("5_gspg7")
region = Rect2(192, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_wm63m"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lggij")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6mdcx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7bsth")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_odbl3")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_vny0f"]
atlas = ExtResource("11_5xih2")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_0j5tt"]
atlas = ExtResource("11_5xih2")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_u6j8d"]
atlas = ExtResource("11_5xih2")
region = Rect2(512, 0, 256, 256)

[sub_resource type="SpriteFrames" id="SpriteFrames_8igb4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vny0f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0j5tt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u6j8d")
}],
"loop": true,
"name": &"default",
"speed": 15.0
}]

[sub_resource type="Animation" id="Animation_hwi8e"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/helpButton/glow:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/helpButton/glow:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_162n1"]
resource_name = "glow"
length = 0.5
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/helpButton/glow:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(5, 5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/helpButton/glow:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6fpde"]
_data = {
"RESET": SubResource("Animation_hwi8e"),
"glow": SubResource("Animation_162n1")
}

[node name="villageManager" type="Node2D" groups=["Persist"]]
texture_filter = 1
script = ExtResource("1_8453s")

[node name="background" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="water" type="AnimatedSprite2D" parent="background"]
z_index = -1
position = Vector2(577, 315)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_q7dmf")
autoplay = "default"

[node name="forest" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 17.0
offset_top = 84.0
offset_right = 546.0
offset_bottom = 237.0

[node name="forest" type="TextureRect" parent="forest"]
layout_mode = 0
offset_left = -18.0
offset_top = -153.0
offset_right = 366.0
offset_bottom = 103.0
scale = Vector2(3, 3)
mouse_filter = 2
texture = ExtResource("3_coavi")

[node name="lumberjackCount" type="Label" parent="forest"]
layout_mode = 0
offset_left = 122.0
offset_top = 13.0
offset_right = 394.0
offset_bottom = 58.0
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 32
text = "Lumberjack: 9999"

[node name="addLumberjack" type="Button" parent="forest"]
layout_mode = 0
offset_left = 91.0
offset_top = 65.0
offset_right = 431.0
offset_bottom = 138.0
theme_override_font_sizes/font_size = 32
text = "+"

[node name="fisherman" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 17.0
offset_top = 390.0
offset_right = 549.0
offset_bottom = 554.0
mouse_filter = 2

[node name="fishing" type="TextureRect" parent="fisherman"]
layout_mode = 0
offset_left = -18.0
offset_top = -459.0
offset_right = 1134.0
offset_bottom = 309.0
mouse_filter = 2
texture = ExtResource("4_erpi2")

[node name="fishermanCount" type="Label" parent="fisherman"]
layout_mode = 0
offset_left = 134.0
offset_top = 23.0
offset_right = 406.0
offset_bottom = 68.0
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 32
text = "Fisherman: 9999"

[node name="addFisherman" type="Button" parent="fisherman"]
layout_mode = 0
offset_left = 119.0
offset_top = 85.0
offset_right = 411.0
offset_bottom = 138.0
theme_override_font_sizes/font_size = 32
text = "+"

[node name="shipyard" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 542.0
offset_top = 147.0
offset_right = 762.0
offset_bottom = 345.0
scale = Vector2(0.99189, 0.988453)

[node name="shipyard" type="TextureRect" parent="shipyard"]
texture_filter = 1
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0
scale = Vector2(3, 3)
texture = ExtResource("5_31vu7")

[node name="shipyardMenuButton" type="Button" parent="shipyard"]
texture_filter = 1
layout_mode = 0
offset_right = 192.0
offset_bottom = 192.0
theme_override_colors/font_hover_color = Color(0.306923, 0.306923, 0.306923, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 32
text = "
Shipyard
"
flat = true

[node name="repairman" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 762.0
offset_top = 245.0
offset_right = 802.0
offset_bottom = 285.0

[node name="addRepairman" type="Button" parent="repairman"]
layout_mode = 0
offset_left = 11.0
offset_top = 13.0
offset_right = 391.0
offset_bottom = 133.0
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 32
text = "Add Repairman"

[node name="repairmanCount" type="Label" parent="repairman"]
layout_mode = 0
offset_left = 129.0
offset_top = -31.0
offset_right = 389.0
offset_bottom = 14.0
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 32
text = "Repairman: 9999"

[node name="boat" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 806.0
offset_top = 30.0
offset_right = 846.0
offset_bottom = 70.0

[node name="boat" type="AnimatedSprite2D" parent="boat"]
z_index = -1
position = Vector2(274, 255)
scale = Vector2(8.58161, 5.95117)
sprite_frames = SubResource("SpriteFrames_wm63m")

[node name="skipToBoss" type="Button" parent="boat"]
layout_mode = 0
offset_left = 39.0
offset_top = 467.0
offset_right = 346.0
offset_bottom = 541.0
text = "Skip to Boss"

[node name="StartGame" type="Button" parent="boat"]
layout_mode = 0
offset_left = 39.0
offset_top = 544.0
offset_right = 346.0
offset_bottom = 618.0
text = "Begin Mission"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="woodUI" type="Control" parent="CanvasLayer"]
texture_filter = 1
layout_mode = 3
anchors_preset = 0
offset_left = 5.0
offset_top = 601.0
offset_right = 34.0
offset_bottom = 627.0

[node name="NinePatchRect" type="NinePatchRect" parent="CanvasLayer/woodUI"]
texture_filter = 1
layout_mode = 0
offset_left = -5.0
offset_top = -4.0
offset_right = 237.0
offset_bottom = 47.0
texture = ExtResource("7_nrjl2")
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/woodUI"]
layout_mode = 0
offset_top = 6.0
offset_right = 64.0
offset_bottom = 70.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("8_ss86h")

[node name="woodCount" type="Label" parent="CanvasLayer/woodUI"]
layout_mode = 0
offset_left = 35.0
offset_right = 233.0
offset_bottom = 45.0
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 32
text = "Wood: 99999"

[node name="foodUI" type="Control" parent="CanvasLayer"]
texture_filter = 1
layout_mode = 3
anchors_preset = 0
offset_left = 277.0
offset_top = 601.0
offset_right = 306.0
offset_bottom = 627.0

[node name="NinePatchRect" type="NinePatchRect" parent="CanvasLayer/foodUI"]
texture_filter = 1
layout_mode = 0
offset_left = -5.0
offset_top = -4.0
offset_right = 237.0
offset_bottom = 47.0
texture = ExtResource("7_nrjl2")
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/foodUI"]
layout_mode = 0
offset_left = -1.0
offset_top = 7.0
offset_right = 32.0
offset_bottom = 39.0
texture = ExtResource("8_wm16u")

[node name="foodCount" type="Label" parent="CanvasLayer/foodUI"]
layout_mode = 0
offset_left = 35.0
offset_right = 233.0
offset_bottom = 45.0
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 32
text = "Food: 99999"

[node name="popUI" type="Control" parent="CanvasLayer"]
texture_filter = 1
layout_mode = 3
anchors_preset = 0
offset_left = 543.0
offset_top = 601.0
offset_right = 572.0
offset_bottom = 627.0

[node name="NinePatchRect" type="NinePatchRect" parent="CanvasLayer/popUI"]
texture_filter = 1
layout_mode = 0
offset_left = -5.0
offset_top = -4.0
offset_right = 280.0
offset_bottom = 47.0
texture = ExtResource("7_nrjl2")
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/popUI"]
layout_mode = 0
offset_left = 1.0
offset_top = 7.0
offset_right = 65.0
offset_bottom = 71.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("10_4uajt")

[node name="popCount" type="Label" parent="CanvasLayer/popUI"]
layout_mode = 0
offset_left = 35.0
offset_right = 233.0
offset_bottom = 45.0
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 32
text = "People?: 99999"

[node name="rainEffect" type="AnimatedSprite2D" parent="CanvasLayer"]
modulate = Color(1, 1, 1, 0.0980392)
texture_filter = 1
position = Vector2(576.5, 325)
scale = Vector2(4.51172, 2.52344)
sprite_frames = SubResource("SpriteFrames_8igb4")
autoplay = "default"

[node name="helpButton" type="Button" parent="CanvasLayer"]
offset_left = 1002.0
offset_top = 14.0
offset_right = 1144.0
offset_bottom = 89.0
text = "How to play"

[node name="glow" type="Sprite2D" parent="CanvasLayer/helpButton"]
visible = false
z_index = -1
position = Vector2(69, 40)
texture = ExtResource("6_x86gk")

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/helpButton"]
root_node = NodePath("../../..")
libraries = {
"": SubResource("AnimationLibrary_6fpde")
}

[node name="helpMenu" parent="CanvasLayer" instance=ExtResource("13_12tmy")]

[node name="shipyardMenu" parent="CanvasLayer" instance=ExtResource("14_q8gvt")]

[node name="cheats" type="Button" parent="CanvasLayer"]
offset_right = 45.0
offset_bottom = 41.0
flat = true

[node name="cheatMenu" type="Control" parent="CanvasLayer/cheats"]
texture_filter = 1
anchors_preset = 0
offset_left = 3.0
offset_top = 2.0
offset_right = 43.0
offset_bottom = 42.0
script = ExtResource("36_s1wjk")

[node name="woodButton" type="Button" parent="CanvasLayer/cheats/cheatMenu"]
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/cheats/cheatMenu/woodButton"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("8_ss86h")

[node name="foodButton" type="Button" parent="CanvasLayer/cheats/cheatMenu"]
layout_mode = 0
offset_top = 32.0
offset_right = 32.0
offset_bottom = 62.0

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/cheats/cheatMenu/foodButton"]
layout_mode = 0
offset_top = -1.0
offset_right = 40.0
offset_bottom = 39.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("8_ss86h")

[node name="volunteerButton" type="Button" parent="CanvasLayer/cheats/cheatMenu"]
layout_mode = 0
offset_top = 62.0
offset_right = 31.0
offset_bottom = 94.0

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/cheats/cheatMenu/volunteerButton"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("10_4uajt")

[node name="bossUnlock" type="Button" parent="CanvasLayer/cheats/cheatMenu"]
layout_mode = 0
offset_top = 94.0
offset_right = 31.0
offset_bottom = 126.0

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/cheats/cheatMenu/bossUnlock"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("37_jwrhm")

[node name="earnReport" type="Control" parent="CanvasLayer"]
visible = false
texture_filter = 1
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("38_5bnfc")

[node name="NinePatchRect" type="NinePatchRect" parent="CanvasLayer/earnReport"]
layout_mode = 0
offset_right = 1153.0
offset_bottom = 646.0
texture = ExtResource("9_g40b4")
patch_margin_left = 34
patch_margin_top = 34
patch_margin_right = 34
patch_margin_bottom = 34

[node name="Label" type="Label" parent="CanvasLayer/earnReport/NinePatchRect"]
layout_mode = 0
offset_left = 40.0
offset_top = 40.0
offset_right = 304.0
offset_bottom = 63.0
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 32
text = "While you were away, you earned:"

[node name="wood" type="TextureRect" parent="CanvasLayer/earnReport/NinePatchRect"]
layout_mode = 0
offset_left = 72.0
offset_top = 112.0
offset_right = 255.0
offset_bottom = 266.0
texture = ExtResource("8_ss86h")

[node name="woodLabel" type="Label" parent="CanvasLayer/earnReport/NinePatchRect/wood"]
layout_mode = 0
offset_left = 195.0
offset_top = 13.0
offset_right = 1006.0
offset_bottom = 146.0
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 32
text = "+00000 Wood"

[node name="food" type="TextureRect" parent="CanvasLayer/earnReport/NinePatchRect"]
layout_mode = 0
offset_left = 72.0
offset_top = 267.0
offset_right = 255.0
offset_bottom = 421.0
texture = ExtResource("8_wm16u")

[node name="foodLabel" type="Label" parent="CanvasLayer/earnReport/NinePatchRect/food"]
layout_mode = 0
offset_left = 195.0
offset_top = 13.0
offset_right = 1006.0
offset_bottom = 146.0
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 32
text = "+00000 Food"

[node name="wood3" type="TextureRect" parent="CanvasLayer/earnReport/NinePatchRect"]
layout_mode = 0
offset_left = 74.0
offset_top = 433.0
offset_right = 257.0
offset_bottom = 587.0
texture = ExtResource("10_4uajt")

[node name="volunteerLabel" type="Label" parent="CanvasLayer/earnReport/NinePatchRect/wood3"]
layout_mode = 0
offset_left = 195.0
offset_top = 13.0
offset_right = 1006.0
offset_bottom = 146.0
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 32
text = "+00000 Volunteers rescued. "

[node name="closeButton" type="Button" parent="CanvasLayer/earnReport"]
layout_mode = 0
offset_left = 1069.0
offset_top = 34.0
offset_right = 1119.0
offset_bottom = 82.0
text = "X"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_3x7vg")
volume_db = -10.0
autoplay = true

[connection signal="button_down" from="forest/addLumberjack" to="." method="_on_add_lumberjack_button_down"]
[connection signal="button_down" from="fisherman/addFisherman" to="." method="_on_add_fisherman_button_down"]
[connection signal="button_down" from="shipyard/shipyardMenuButton" to="." method="_on_shipyard_menu_button_down"]
[connection signal="button_down" from="repairman/addRepairman" to="." method="_on_add_repairman_button_down"]
[connection signal="button_down" from="boat/skipToBoss" to="." method="_on_skip_to_boss_button_down"]
[connection signal="button_down" from="boat/StartGame" to="." method="_on_start_game_button_down"]
[connection signal="button_down" from="CanvasLayer/helpButton" to="CanvasLayer/helpMenu" method="_on_help_button_button_down"]
[connection signal="button_down" from="CanvasLayer/cheats" to="CanvasLayer/cheats/cheatMenu" method="_on_cheats_button_down"]
[connection signal="button_down" from="CanvasLayer/cheats/cheatMenu/woodButton" to="CanvasLayer/cheats/cheatMenu" method="_on_wood_button_button_down"]
[connection signal="button_down" from="CanvasLayer/cheats/cheatMenu/foodButton" to="CanvasLayer/cheats/cheatMenu" method="_on_food_button_button_down"]
[connection signal="button_down" from="CanvasLayer/cheats/cheatMenu/volunteerButton" to="CanvasLayer/cheats/cheatMenu" method="_on_volunteer_button_button_down"]
[connection signal="button_down" from="CanvasLayer/cheats/cheatMenu/bossUnlock" to="CanvasLayer/cheats/cheatMenu" method="_on_boss_unlock_button_down"]
[connection signal="button_down" from="CanvasLayer/earnReport/closeButton" to="CanvasLayer/earnReport" method="_on_close_button_button_down"]
